[project]
name = "function_test_fixtures"
version = "0.1"
description = "Functions for generating fixtures for testing functions"
authors = [
  { name = "Aubrey Rees", email = "aubrey@kleetope.net" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/aubreyrees/function-testing-fixtures"
"Bug Tracker" = "https://github.com/aubreyrees/function-testing-fixtures/issues"

[project.optional-dependencies]
dev = ["tox","pytest","coverage","ruff","build","ipython"]
build = ["tox","build"]

[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
select = ["E", "F" ,"W" ,"N","D","ANN"]
ignore = ["D212", "D203", "ANN102"]
line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"


[tool.ruff.mccabe]
max-complexity = 10


[tool.coverage.run]
branch = true
source = ["function_testing_fixtures"]


[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}
